objects/DHC_Questions__c.object
<CustomObject>
    <fields>
        <fullName>CSF__c</fullName>
        <label>CSF</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Stage__c</fullName>
        <label>Sales Stage</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DHC_Rating</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>DHC_Question_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHC_Ratings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>